Show competition list

--- a/public/scripts/locales/en/translation.json
+++ b/public/scripts/locales/en/translation.json
@@ -8,5 +8,11 @@
 		"language":"Language",
 		"ru":"Russian",
 		"en":"English" 
+	},
+	"compets":{
+		"number":"№",
+		"name":"название",
+		"place":"Место проведения",
+		"descr":"Описание"
 	}
 }
